--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -165,9 +165,8 @@ input, select, textarea {
 	}
 
 	hr {
-		border-top: solid 1px rgba(124, 128, 129, 0.2);
-		border: 0;
-		margin-bottom: 1.5em;
+		border-top: solid 1px rgba(124, 128, 129, 0.2);		
+		margin-bottom: 1em;
 	}
 
 	blockquote {
@@ -1756,9 +1755,8 @@ input, select, textarea {
 			margin-bottom: 0;
 		}
 
-		header.special h2 + p {
+		header.special p {
 			margin-bottom: 0;
-			padding-top: 1.5em;
 		}
 
 		header.special .icon {
@@ -1784,6 +1782,11 @@ input, select, textarea {
 		padding-top: 3em;
 	}
 
+	ul#skills {margin: 2rem; display: flex; flex-wrap: wrap; justify-content: center;}
+	ul#skills li {flex: 30%;}
+
+	.wrap {display: flex; flex-wrap: nowrap; justify-content: space-between}
+	.wrap p {margin: 0;}
 /* Form */
 
 	input[type="text"],
